2008-10-19  Jerry DeLisle  <jvdelisle@gcc.gnu.org

	PR libfortran/37863
	Backport from trunk.
	* io/write_float.def (WRITE_FLOAT): Round to 1.0 correctly.

2008-10-19  Jerry DeLisle  <jvdelisle@gcc.gnu.org

	PR libfortran/37707
	Backport from trunk.
	* io/list_read.c (nml_get_obj_data): If the first namelist object rank
	is greater than zero, call nml_object_read with the first object rather
	than the sub-object.

2008-08-27  Release Manager

	* GCC 4.3.2 released.

2008-07-26  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/36582
	Backport from trunk.
	* io/list_read.c: If variable rank is zero, do not adjust the found
	namelist object pointer.
	
2008-07-01  Jerry DeLisle  <jvdelisle@gcc.gnu.org

	PR fortran/36676
	PR fortran/36657
	PR fortran/36546
	Backport from trunk.
	* io/list_read.c (find_nml_name): Use unget_char before eat_separator.
	(read_character): Check for '!' along with separators.
	(eat_separator): Add tab character to condition	for looping past
	whitespace.
	
2008-06-14  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/36538
	Backport from trunk.
	* io/list_read.c (namelist_read): Add eat_separator to
	eliminate leading tabs.

2008-06-06  Release Manager

	* GCC 4.3.1 released.

2008-05-06  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR libfortran/35995
	PR libfortran/35990
	Backport from trunk.
	* m4/ifunction_logical.m4:  If the extent of "array"
	is less than zero, set it to zero.  Use an explicit
	flag for breaking out of the main loop to avoid, because
	the data pointer for "array" may be NULL for an empty
	array.
	* m4/ifunction.m4:  Likewise.
	* generated/all_l1.c: Regenerated.
	* generated/all_l16.c: Regenerated.
	* generated/all_l2.c: Regenerated.
	* generated/all_l4.c: Regenerated.
	* generated/all_l8.c: Regenerated.
	* generated/any_l1.c: Regenerated.
	* generated/any_l16.c: Regenerated.
	* generated/any_l2.c: Regenerated.
	* generated/any_l4.c: Regenerated.
	* generated/any_l8.c: Regenerated.
	* generated/count_16_l.c: Regenerated.